Add user permissions to profiles, display existing pets

--- a/core/templates/core/employee_dashboard.html
+++ b/core/templates/core/employee_dashboard.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Client Dashboard</title>
 </head>
 
 <body>
     <h1>Welcome, {{ user.username }}!</h1>
-    <p>You are now logged in.</p>
+    <p>You are logged in as a <strong>{{ user.userprofile.role }}</strong>.</p>
     <a href="{% url 'logout' %}">Logout</a>
 </body>
 
