Add approval process for pet profiles via manager

--- a/core/templates/core/client_dashboard.html
+++ b/core/templates/core/client_dashboard.html
@@ -29,7 +29,7 @@
     <p>You haven't added any pets yet.</p>
     {% endif %}
 
-    {# <a href="{% url 'add_pet' %}">Add a Pet</a> #}
+    <a href="{% url 'add_pet' %}">Add a Pet</a>
 </body>
 
 </html>
