Create basic booking form

--- a/core/templates/core/client_dashboard.html
+++ b/core/templates/core/client_dashboard.html
@@ -30,6 +30,11 @@
     {% endif %}
 
     <a href="{% url 'add_pet' %}">Add a Pet</a>
+
+    <h2>Appointments</h2>
+    <p>
+        <a href="{% url 'book_appointment' %}">📅 Book a New Appointment</a>
+    </p>
 </body>
 
 </html>
