--- a/core/templates/core/employee_dashboard.html
+++ b/core/templates/core/employee_dashboard.html
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'core/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Client Dashboard</title>
-</head>
-
-<body>
-    <h1>Welcome, {{ user.username }}!</h1>
-    <p>You are logged in as a <strong>{{ user.userprofile.role }}</strong>.</p>
-    <a href="{% url 'logout' %}">Logout</a>
-</body>
-
-</html>
+{% block content %}
+<h1>Welcome, {{ user.username }}!</h1>
+<p>You are logged in as a <strong>{{ user.userprofile.role }}</strong>.</p>
+<a href="{% url 'logout' %}">Logout</a>
+{% endblock %}
