Add manager approval for appointments

--- a/core/templates/core/manager_dashboard.html
+++ b/core/templates/core/manager_dashboard.html
@@ -11,5 +11,8 @@
 <p style="color: red;">🚨 You have new pet profiles to review:</p>
 {% endif %}
 
-<a href="{% url 'approve_pets' %}">Approve Pending Pets</a>
+<ul>
+    <li><a href="{% url 'approve_pets' %}">Approve Pending Pets</a></li>
+    <li><a href="{% url 'approve_appointments' %}">Approve Pending Appointments</a></li>
+</ul>
 {% endblock %}
