--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -11,11 +11,13 @@
 <body>
 
     {% if messages %}
-    <ul class="messages">
+    <div class="messages">
         {% for message in messages %}
-        <li>{{ message }}</li>
+        <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+        </div>
         {% endfor %}
-    </ul>
+    </div>
     {% endif %}
 
     {% block content %}
