--- a/core/templates/core/manager_dashboard.html
+++ b/core/templates/core/manager_dashboard.html
@@ -17,6 +17,6 @@
 
 <ul>
     <li><a href="{% url 'approve_pets' %}">Approve Pending Pets</a></li>
-    <li><a href="{% url 'approve_appointments' %}">Approve Pending Appointments</a></li>
+    <li><a href="{% url 'approve_appointments' %}">View Appointments</a></li>
 </ul>
 {% endblock %}
